--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,34 +9,13 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="7">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">4,343</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">4</td><td class="num">0</td><td class="num">0</td><td class="num">3,842</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">parameterization.TestNGParameterizationExcel</td><td><a href="#m0">testData</a></td><td rowspan="1">1594101361711</td><td rowspan="1">4280</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="4">parameterization.TestNGParameterizationExcel</td><td><a href="#m0">testData</a></td><td rowspan="4">1594114508676</td><td rowspan="4">32</td></tr><tr class="passedeven"><td><a href="#m1">testData</a></td></tr><tr class="passedeven"><td><a href="#m2">testData</a></td></tr><tr class="passedeven"><td><a href="#m3">testData</a></td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">parameterization.TestNGParameterizationExcel#testData</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">org.testng.internal.reflect.MethodMatcherException: 
-Data provider mismatch
-Method: testData([Parameter{index=0, type=java.lang.String, declaredAnnotations=[]}, Parameter{index=1, type=java.lang.String, declaredAnnotations=[]}, Parameter{index=2, type=java.lang.String, declaredAnnotations=[]}])
-Arguments: [(java.lang.String) janielle,(java.lang.String) test_password123,(java.lang.String) Y,(java.lang.String) 25.0,(java.lang.String) F]
-	at org.testng.internal.reflect.DataProviderMethodMatcher.getConformingArguments(DataProviderMethodMatcher.java:45)
-	at org.testng.internal.Parameters.injectParameters(Parameters.java:796)
-	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:983)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:125)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
-	at org.testng.TestRunner.privateRun(TestRunner.java:648)
-	at org.testng.TestRunner.run(TestRunner.java:505)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:455)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:450)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:415)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:364)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:84)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1208)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1137)
-	at org.testng.TestNG.runSuites(TestNG.java:1049)
-	at org.testng.TestNG.run(TestNG.java:1017)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">parameterization.TestNGParameterizationExcel#testData</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{age=25.0, password=test_password123, gender=F, is_correct=Y, username=janielle}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">parameterization.TestNGParameterizationExcel#testData</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{age=26.0, password=test_password456, gender=M, is_correct=N, username=jan_greg}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">parameterization.TestNGParameterizationExcel#testData</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{age=28.0, password=test_password13, gender=F, is_correct=Y, username=jannn}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">parameterization.TestNGParameterizationExcel#testData</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{age=27.0, password=test_password4789, gender=M, is_correct=N, username=jan2x}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
