--- a/test-output/index.html
+++ b/test-output/index.html
@@ -24,7 +24,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 1 failed test</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -38,7 +38,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Default_suite" class="navigator-link">
-              <span class="suite-name border-failed">Default suite</span>
+              <span class="suite-name border-passed">Default suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\hello\AppData\Local\Temp\testng-eclipse-263442305\testng-customsuite.xml</span>
+                    <span>C:\Users\hello\AppData\Local\Temp\testng-eclipse--1801084629\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -91,21 +91,36 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method, 1 failed,   </span>
+                    <span class="method-stats">4 methods,   4 passed</span>
                   </li>
                   <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Default_suite" class="hide-methods failed suite-Default_suite"> (hide)</a> <!-- hide-methods failed suite-Default_suite -->
-                      <a href="#" panel-name="suite-Default_suite" class="show-methods failed suite-Default_suite"> (show)</a> <!-- show-methods failed suite-Default_suite -->
+                    <span class="method-list-title passed">Passed methods</span>
+                    <span class="show-or-hide-methods passed">
+                      <a href="#" panel-name="suite-Default_suite" class="hide-methods passed suite-Default_suite"> (hide)</a> <!-- hide-methods passed suite-Default_suite -->
+                      <a href="#" panel-name="suite-Default_suite" class="show-methods passed suite-Default_suite"> (show)</a> <!-- show-methods passed suite-Default_suite -->
                     </span>
-                    <div class="method-list-content failed suite-Default_suite">
+                    <div class="method-list-content passed suite-Default_suite">
                       <span>
-                        <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="parameterization.TestNGParameterizationExcel" class="method navigator-link" hash-for-method="testData">testData</a> <!-- method navigator-link -->
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="parameterization.TestNGParameterizationExcel" class="method navigator-link" hash-for-method="testData({age=25.0, password=test_password123, gender=F, is_correct=Y, username=janielle})">testData({age=25.0, password=test_password123, gender=F, is_correct=Y, username=janielle})</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content failed suite-Default_suite -->
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="parameterization.TestNGParameterizationExcel" class="method navigator-link" hash-for-method="testData({age=26.0, password=test_password456, gender=M, is_correct=N, username=jan_greg})">testData({age=26.0, password=test_password456, gender=M, is_correct=N, username=jan_greg})</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="parameterization.TestNGParameterizationExcel" class="method navigator-link" hash-for-method="testData({age=28.0, password=test_password13, gender=F, is_correct=Y, username=jannn})">testData({age=28.0, password=test_password13, gender=F, is_correct=Y, username=jannn})</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Default_suite" title="parameterization.TestNGParameterizationExcel" class="method navigator-link" hash-for-method="testData({age=27.0, password=test_password4789, gender=M, is_correct=N, username=jan2x})">testData({age=27.0, password=test_password4789, gender=M, is_correct=N, username=jan2x})</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content passed suite-Default_suite -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -117,51 +132,50 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Default_suite" class="panel Default_suite">
-          <div class="suite-Default_suite-class-failed">
+          <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
+              <img src="passed.png"/>
               <span class="class-name">parameterization.TestNGParameterizationExcel</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="testData">
-                  </a> <!-- testData -->
+                  <a name="testData({age=25.0, password=test_password123, gender=F, is_correct=Y, username=janielle})">
+                  </a> <!-- testData({age=25.0, password=test_password123, gender=F, is_correct=Y, username=janielle}) -->
                   <span class="method-name">testData</span>
-                  <div class="stack-trace">org.testng.internal.reflect.MethodMatcherException: 
-Data provider mismatch
-Method: testData([Parameter{index=0, type=java.lang.String, declaredAnnotations=[]}, Parameter{index=1, type=java.lang.String, declaredAnnotations=[]}, Parameter{index=2, type=java.lang.String, declaredAnnotations=[]}])
-Arguments: [(java.lang.String) janielle,(java.lang.String) test_password123,(java.lang.String) Y,(java.lang.String) 25.0,(java.lang.String) F]
-	at org.testng.internal.reflect.DataProviderMethodMatcher.getConformingArguments(DataProviderMethodMatcher.java:45)
-	at org.testng.internal.Parameters.injectParameters(Parameters.java:796)
-	at org.testng.internal.Invoker.invokeTestMethods(Invoker.java:983)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:125)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:109)
-	at org.testng.TestRunner.privateRun(TestRunner.java:648)
-	at org.testng.TestRunner.run(TestRunner.java:505)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:455)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:450)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:415)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:364)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:52)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:84)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1208)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1137)
-	at org.testng.TestNG.runSuites(TestNG.java:1049)
-	at org.testng.TestNG.run(TestNG.java:1017)
-	at org.testng.remote.AbstractRemoteTestNG.run(AbstractRemoteTestNG.java:115)
-	at org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:251)
-	at org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:77)
-
-</div> <!-- stack-trace -->
+                  <span class="parameters">({age=25.0, password=test_password123, gender=F, is_correct=Y, username=janielle})</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testData({age=26.0, password=test_password456, gender=M, is_correct=N, username=jan_greg})">
+                  </a> <!-- testData({age=26.0, password=test_password456, gender=M, is_correct=N, username=jan_greg}) -->
+                  <span class="method-name">testData</span>
+                  <span class="parameters">({age=26.0, password=test_password456, gender=M, is_correct=N, username=jan_greg})</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testData({age=28.0, password=test_password13, gender=F, is_correct=Y, username=jannn})">
+                  </a> <!-- testData({age=28.0, password=test_password13, gender=F, is_correct=Y, username=jannn}) -->
+                  <span class="method-name">testData</span>
+                  <span class="parameters">({age=28.0, password=test_password13, gender=F, is_correct=Y, username=jannn})</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testData({age=27.0, password=test_password4789, gender=M, is_correct=N, username=jan2x})">
+                  </a> <!-- testData({age=27.0, password=test_password4789, gender=M, is_correct=N, username=jan2x}) -->
+                  <span class="method-name">testData</span>
+                  <span class="parameters">({age=27.0, password=test_password4789, gender=M, is_correct=N, username=jan2x})</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-failed -->
+          </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\hello\AppData\Local\Temp\testng-eclipse-263442305\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\hello\AppData\Local\Temp\testng-eclipse--1801084629\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -210,16 +224,28 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(4);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'testData')
 data.setCell(0, 2, 'parameterization.TestNGParameterizationExcel')
-data.setCell(0, 3, 4280);
+data.setCell(0, 3, 32);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'testData')
+data.setCell(1, 2, 'parameterization.TestNGParameterizationExcel')
+data.setCell(1, 3, 2);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'testData')
+data.setCell(2, 2, 'parameterization.TestNGParameterizationExcel')
+data.setCell(2, 3, 1);
+data.setCell(3, 0, 3)
+data.setCell(3, 1, 'testData')
+data.setCell(3, 2, 'parameterization.TestNGParameterizationExcel')
+data.setCell(3, 3, 0);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 35 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -244,6 +270,24 @@ return data;
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="chronological-class">
+              <div class="chronological-class-name">parameterization.TestNGParameterizationExcel</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">testData({age=25.0, password=test_password123, gender=F, is_correct=Y, username=janielle})</span>
+                <span class="method-start">0 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testData({age=26.0, password=test_password456, gender=M, is_correct=N, username=jan_greg})</span>
+                <span class="method-start">35 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testData({age=27.0, password=test_password4789, gender=M, is_correct=N, username=jan2x})</span>
+                <span class="method-start">39 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">testData({age=28.0, password=test_password13, gender=F, is_correct=Y, username=jannn})</span>
+                <span class="method-start">41 ms</span>
+              </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
